tests/rosetta/out/C/angle-difference-between-two-bearings-2.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:53Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:53Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int testCases;

double angleDiff(double b1, double b2) {
  __auto_type diff = b2 - b1;
  return ((diff % 360.0 + 360.0 + 180.0) % 360.0) - 180.0;
}

int _mochi_main() {
  list_float tmp2 = list_float_create(2);
  tmp2.data[0] = 20.0;
  tmp2.data[1] = 45.0;
  list_int tmp3 = list_int_create(2);
  tmp3.data[0] = 0 - 45.0;
  tmp3.data[1] = 45.0;
  list_int tmp4 = list_int_create(2);
  tmp4.data[0] = 0 - 85.0;
  tmp4.data[1] = 90.0;
  list_int tmp5 = list_int_create(2);
  tmp5.data[0] = 0 - 95.0;
  tmp5.data[1] = 90.0;
  list_int tmp6 = list_int_create(2);
  tmp6.data[0] = 0 - 45.0;
  tmp6.data[1] = 125.0;
  list_int tmp7 = list_int_create(2);
  tmp7.data[0] = 0 - 45.0;
  tmp7.data[1] = 145.0;
  list_float tmp8 = list_float_create(2);
  tmp8.data[0] = 29.4803;
  tmp8.data[1] = 0 - 88.6381;
  list_int tmp9 = list_int_create(2);
  tmp9.data[0] = 0 - 78.3251;
  tmp9.data[1] = 0 - 159.036;
  list_int tmp10 = list_int_create(2);
  tmp10.data[0] = 0 - 70099.74233810938;
  tmp10.data[1] = 29840.67437876723;
  list_int tmp11 = list_int_create(2);
  tmp11.data[0] = 0 - 165313.6666297357;
  tmp11.data[1] = 33693.9894517456;
  list_float tmp12 = list_float_create(2);
  tmp12.data[0] = 1174.8380510598456;
  tmp12.data[1] = 0 - 154146.66490124757;
  list_float tmp13 = list_float_create(2);
  tmp13.data[0] = 60175.77306795546;
  tmp13.data[1] = 42213.07192354373;
  list_int tmp1_data[] = {tmp2, tmp3, tmp4,  tmp5,  tmp6,  tmp7,
                          tmp8, tmp9, tmp10, tmp11, tmp12, tmp13};
  list_list_int tmp1 = {12, tmp1_data};
  testCases = tmp1;
  for (int tmp14 = 0; tmp14 < testCases.len; tmp14++) {
    list_float tc = testCases.data[tmp14];
    printf("%.17g\n", angleDiff(tc.data[0], tc.data[1]));
  }
  return 0;
}
int main() { return _mochi_main(); }
